--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
+
+    <!--<script src="http://www.skulpt.org/static/skulpt.min.js" type="text/javascript"></script>-->
+    <!--<script src="http://www.skulpt.org/static/skulpt-stdlib.js" type="text/javascript"></script>-->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
@@ -37,4 +40,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+
 </html>
